[package]
name = "sunshine"
version = "0.1.0"
authors = ["Ivan Oštrić <ivan@halcyon.hr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
sunrise = "1.0.0"
chrono = "0.4.11"
corelocation-rs = { git = "https://github.com/nthapaliya/corelocation-rs" }
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

